--- a/3dstyles.css
+++ b/3dstyles.css
@@ -1,7 +1,7 @@
 /* Reset and Base Settings */
 body {
   margin: 0;
-  font-family: 'Dancing Script', cursive;
+  font-family: 'Dancing Script';
   background: #061117;
   overflow: hidden;
 }
